--- a/PrivateSchoolFrontEnd/package.json
+++ b/PrivateSchoolFrontEnd/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~13.2.4",
     "@angular/platform-browser-dynamic": "~13.2.4",
     "@angular/router": "~13.2.4",
+    "bootstrap": "^5.1.3",
     "jest-editor-support": "*",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
